# xBulk

./: Cargo.toml
meta/: Cargo.toml
output/: xbulk.abi.json  xbulk.imports.json  xbulk.mxsc.json  xbulk.wasm
src/: xbulk.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
