[package]
name = "xbulk"
version = "2.0.0"
authors = ["Alessandro De Franceschi <info@defralcoding.it>"]
edition = "2021"
publish = false

[lib]
path = "src/xbulk.rs"

[dependencies.multiversx-sc]
version = "0.45.1"

[dependencies.multiversx-sc-modules]
version = "0.45.1"

[dev-dependencies.multiversx-sc-scenario]
version = "0.45.1"
